--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ TWITTER_API_SECRET=WLWjE6gibu0epcUtyJNIUJSosshsmB4t1jrTWjwRhLFf66U7PJ
 TWITTER_ACCESS_TOKEN=1685470241030287360-ew6ffFIJC253C5eYDt63g3TEOEgnXT
 TWITTER_ACCESS_TOKEN_SECRET=YzLTdATDXYDIY5oTktB2sNTAOYcQz9kGfkGuYwJ3egtYX
 TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAAM%2BFxAEAAAAAv4t2q9jXBhSVcao49VqpcsPtqKs%3D87xKqG5btaCjtAzbrrAseiwQIrHrADZQ8B81bdMgoycnkCliT3
+SUPABASE_ACCESS_TOKEN=sbp_d8654e89b8d4350756f93ea55beb91220177d2a7
