--- a/Mirror/package.json
+++ b/Mirror/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-twitter-app",
+  "name": "Mirror",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.32.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
@@ -21,11 +22,10 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^7.0.1",
-    "tailwindcss": "^3.4.15",
-    "voyageai": "^1.0.0",
-    "anthropic": "^1.0.0",
     "selenium-webdriver": "^4.0.0",
-    "typescript": "^4.0.0"
+    "tailwindcss": "^3.4.15",
+    "ts-node": "^10.9.2",
+    "voyageai": "^0.0.1-5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
